# ubench

./: .appveyor.yml  .cirrus.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/cirrus/: bionic.Dockerfile  focal.Dockerfile  trusty.Dockerfile  xenial.Dockerfile
cmake/: arm64-linux-clang.toolchain.cmake
include/ubench/: ubench.h  ubench_time.h
src/: CMakeLists.txt  ubench.c  ubench_arch_def.h  ubench_assert.c  ubench_compiler.h  ubench_empty_alg.c  ubench_intrin_arm64.h  ubench_intrin_x86.h  ubench_priv.h
src/clocks/: cpu_arch_clock.c  default_clock.c  x86_with_sse2.c  x86_without_sse2.c
